# tech-pr-workbench

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: pages-demo.yml
backend/: pyproject.toml
backend/app/: ai.py  automation.py  bilibili.py  branding.py  clip_export.py  config.py  daily.py  db.py  downloads.py  exports.py  jobs.py  main.py  media.py  opencli_runtime.py  render_jobs.py  render_options.py  schemas.py  scoring.py  seed.py  summaries.py  system.py  templates.py  worker.py  workflow.py  youtube.py  ytdlp_runtime.py
backend/tests/: test_api.py  test_bilibili_download.py  test_clip_export.py  test_downloads.py  test_downloads_ytdlp.py  test_exports.py  test_jobs.py  test_opencli_runtime.py  test_opencli_window.py  test_render_options.py  test_scoring.py  test_transcripts.py  test_youtube_ytdlp.py  test_ytdlp_runtime.py
docker/: nginx.conf
docs/: AI_AGENT_SETUP.md  RELEASE_CHECKLIST.md  ROADMAP.md  TEST_REPORT_2026-07-11.md  TROUBLESHOOTING.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/lib/: api.ts  clipCopy.ts  clipDelivery.ts  clipPreflight.ts  clipQuality.ts  clipSequenceFocus.ts  clipShortcuts.ts  demoApi.ts  (+5 more)
scripts/: clip-copy.test.mjs  clip-delivery.test.mjs  clip-preflight.test.mjs  clip-quality.test.mjs  clip-sequence-focus.test.mjs  clip-shortcuts.test.mjs  clip-validation.test.mjs  demo-api.test.mjs  dev.mjs  dev.test.mjs  job-state.test.mjs  release-smoke.mjs  workspace-state.test.mjs
(+1 files in other folders)
