[project]
name = "tech-pr-workbench-backend"
version = "0.1.0"
description = "Local PR workbench for tracking technology interviews and authorized media processing."
requires-python = ">=3.11,<3.13"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=2.0.0",
    "pillow>=11.0.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.32.1",
    "yt-dlp>=2026.1.1",
]

[project.optional-dependencies]
local-asr = ["faster-whisper>=1.1.0"]
local-translation = ["argos-translate-lt>=1.12.1"]
test = ["pytest>=8.3.4"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
